...

        </android.support.design.widget.BottomNavigationView>

    </FrameLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|left"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:scaleType="center"
...
